tests/fail/tek-ya-da.kip
Bir doğruluk
ya da doğru
olabilir.
